[tool.poetry]
name = "tile-docs"
version = "0.1.0"
description = "Tile Docs"
authors = ["Datapane <info@datapane.com>"]

[tool.poetry.dependencies]
python = ">=3.11,<3.12.0"

# mkdocs
mkdocs-redirects = "^1.2.0"
mkdocstrings = {version = "^0.20.0", extras = ["python"]}
mkdocs-material = "^8.3.7"

# [tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry~=1.4.2"]
build-backend = "poetry.core.masonry.api"
